--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Version 9.0 (Planned)
    •Character editor sidebar replaces Accent Mark dialog
    •Multiple accents can be selected for a single character
    •Separate tabs for characters embedded in the file and characters stored locally
+   •Context menu on character buttons
 Version 8.0 (September 11, 2017)
    •Support for 4k screens
    •Support for themes - Ice(Default), Night, Luna, Olive
